# PostgreSQL-Browser

./: PostgreSQL_Browser.py  README.md  connection_widget.py  data_types.py  database_manager.py  docker-compose.yml  gui_components.py  justfile  main_window.py  pyproject.toml  search_bar.py  sql_query.py  template.py  template_refactored.py  todo.txt
.github/workflows/: check.yml
src/: AiSearchBar.qml  PostgreSQL_Browser.py  ai_search_bar.py  ai_search_bar.qml  app_styles.css  app_styles_mobile_style.css  app_styles_mobile_style_dark.css  connection_widget.py  data_types.py  database_manager.py  gui_components.py  main.py  main_new.py  main_old.py  main_window.py  main_window_new.py  menu.py  openai_query.py  palette.py  rename.py  schema_popup.py  search_bar.py  sql_query.py  toolbar.py  utils.py  warning_types.py
src/database_manager/: abstract.py  pgsql.py
