[tool.poetry]
name = "postgresql-browser"
version = "0.1.0"
description = "A GUI for Postgres Databases"
authors = ["ryan <ryanxgreenup@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.7.1"
psycopg2-binary = "^2.9.9"
typer = "^0.12.5"
pyperclip = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.384"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pg_browser = "main:app"
